<resources>
    <string name="app_name">BISINDO</string>
    <string name="number">NUMBER</string>
    <string name="number_english">ONE</string>
    <string name="home">Home</string>
    <string name="Camera">Camera</string>
    <string name="alfa">alfabet</string>
    <string name="kata_sifat">kata_sifat</string>
    <string name="angka">angka</string>
    <string name="ucapan">Ucapan</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="num">1</string>
    <string name="open">OPEN</string>
    <string name="dictionary">Kamus</string>
    <string name="numbers">Angka</string>
    <string name="other">Fitur Lain</string>
    <string name="desc_detail">Description</string>
    <string name="title">Title</string>
    <string name="imageDetail">Image Detail</string>
    <string name="letter">Letter</string>
    <string name="img_result">Result Image</string>
    <string name="img_background">Image Background</string>
    <string name="img_iconAngka">icon angka</string>
    <string name="baseUrl">https://storage.googleapis.com/signlanguage-bucket2/%s</string>
    <string name="alphabet">Alphabet</string>
    <string name="numerik">Numerik</string>
    <string name="akses_camera">Akses camera</string>
    <string name="no_camera_access">Please grant camera permissions.</string>
    <string name="kerja">Kata sifat</string>
    <string name="dasar">Dasar</string>
    <string name="sapaan">Ucapan</string>
    <string name="comingSoon">Coming soon .....</string>
    <string name="lesson">Lesson</string>
    <string name="search_hint">Cari</string>
    <string name="indosign">IndoSign</string>

</resources>